--- a/estilos.css
+++ b/estilos.css
@@ -1,12 +1,28 @@
 @charset "utf-8";
 /* CSS Document */
 
+
+/*ESTILO DEL HTML*/
 *{
 	margin: 0px;
-	padding: 0px;
-	background-color: lightcyan;  /* Cuando puse un background-color en todo, en el footer me cambio el color de relleno que elegi, quedo un trazo, como se soluciona eso?*/
+	padding: 5px;
 }
 
+
+/*ESTILO DEL BODY*/
+body{
+	background-color: #F4EDDC;
+}
+
+
+h1{
+	font-family: "Gotham-Condensed-Light", "sans-serif";
+	font-size: 35px;
+	text-transform: uppercase;
+}
+
+
+/*FUENTES*/
 @font-face {
 	font-family: "Gotham-Pro-Regular";
 	src: url("fonts/Gotham Pro/GothaProReg.otf") format('truetype');
@@ -36,117 +52,102 @@
 }
 
 
-h2{
-	font-family: "Gotham-Condensed-Bold", "sans-serif";
-	font-size: 35px;
-	color: black;
-	text-transform: uppercase;	
-}
-
-
+/*ESTILO DEL MENU NAVEGADOR*/
 .menu-navegador{
 	list-style: none;
-	width: 1260px;
-	height: 50px;
-	margin: 10px 0px 60px 0px;
-	padding: 0px;
-	background-color: transparent;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
-	align-content: baseline;
-	font-family: "Gotham-Pro-Regular" , "sans-serif";
-	font-size: 15px;
-	text-transform: uppercase
+	font-family: "Gotham-Condensed-Bold", "sans-serif";
+	font-size: 30px;
+	text-transform: uppercase;
+	background-color: transparent;
+	cursor: pointer;
+	flex-grow: 0;
 }
 	
-	.a-nav{
-		height: 50px;
-		width: 170px;
-		text-decoration: none;
-		color: black;
-		background-color: transparent;
-		border-width: 2px;
-		border-style: solid;
-		border-color: black;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-	}
-
-	.li-nav{
-		height: 50px;
-		width: 170px;
-		text-align: center;
-		background-color: transparent;
-		flex-basis: 0;
-		display: inline-block;
-		margin: 20px; 
-	}
-
-
-.seccion-sobre-mi{
-	padding: 15px 60px 15px 60px;
-}
-	#foto-titulo-id{
-		display: flex;
-		flex-direction: row;
-		align-self: flex-start;
-		padding: 0px 60px 15px 0px; 
-		font-family: "Gotham-Condensed-Bold", "sans-serif";
-		font-size: 90px;
-		color: black;
-		text-transform: uppercase
-	}
-	#texto-sobre-mi-id{
-		padding: 15px 0px 15px 0px;
-		font-family: "Gotham-Pro-Regular", "sans-serif";
-		font-size: 15px;
-		color: black;
-	}
-
-
-.seccion-skills{
+.a-nav{
 	display: flex;
 	flex-direction: row;
-	padding: 15px 60px 15px 90px;
-	font-family: "Gotham-Pro-Regular", "sans-serif";
-	font-size: 15px;
-	color: black;
-	list-style-type: disc;
+	justify-content: center;
+	text-decoration: none;
+	color: #030002;
+	background-color: transparent;
+}
+
+.li-nav{
+	text-align: center;
+	background-color: transparent;
+	flex-basis: 0;
+	display: inline-block;
+	flex-direction: row;
 }
 
 
-.seccion-estudios{
+/*ESTILO DE SECCION SOBRE MI (FOTO Y TEXTO)*/
+#foto-principal-id{
+	padding: 0px 60px 15px 60px;
+	display:flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+#texto-sobre-mi-id{
+	display: flex;
+	flex-direction: row;
+	font-family: "Gotham-Condensed-Bold", "sans-serif";
+	font-size: 90px;
+	color: #030002;
+	text-transform: uppercase;
+}
+
+
+/*ESTILO DE SECCION SKILLS + SOFTWARE Y SECCION ESTUDIOS (LOS H1 ESTAN ARRIBA DE TODO)*/
+.seccion-skills-software, .seccion-estudios{
+	padding: 0px 60px 0px 60px;
 	display: flex;
 	flex-direction: column;
-	padding: 15px 60px 15px 60px;
+	align-items: flex-start;
+}
+
+#lista-skills-id, #lista-software-id, #lista-estudios-id{
 	font-family: "Gotham-Pro-Regular", "sans-serif";
 	font-size: 15px;
-	color:black;
-	list-style: none;
+	color: #030002;
+	list-style-type: circle;
 }
 
 
-.seccion-contacto{
-	padding: 40px;
+/*ESTILO DE SECCION CONTACTO*/
+#redes-sociales-id{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	color: #030002;
 }
-	#titulo-contacto-id{
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		padding-bottom: 15px;
-	}
-	#redes-sociales-id{
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		font-family: "Gotham-Pro-Regular", "sans-serif";
-		font-size: 15px;
-		color: black;
-	}
+
+#linkeo-wpp-id, #linkeo-ig-id, #linkeo-email-id{
+	font-family: "Gotham-Pro-Bold", "sans-serif";
+	font-size: 10px;
+	color: #030002;
+	text-transform: lowercase;
+	text-decoration: none;
+}
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+/*ESTILO DEL FOOTER*/
 .footer{
 	padding: 5px;
 	background-color: salmon;
@@ -154,12 +155,5 @@ h2{
 	font-size: 15px;
 	color: black;
 }
-
-
-
-
-
-
-
 
 
